--- a/action.yml
+++ b/action.yml
@@ -36,8 +36,9 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: ${{ github.action_path }}/scripts/action.ps1
-      id:  package-pusher
+    - run   : ${{ github.action_path }}/scripts/action.ps1
+      id    : package-pusher
+      shell : pwsh
       env:
         RV_MAJOR                : ${{ inputs.RV_MAJOR }}
         RV_MINOR                : ${{ inputs.RV_MINOR }}
@@ -50,5 +51,5 @@ runs:
         NUGET_PACKAGE_USERNAME  : ${{ inputs.NUGET_PACKAGE_USERNAME }}
         NUGET_PACKAGE_PAT       : ${{ inputs.NUGET_PACKAGE_PAT }}
 branding:
-  icon: terminal
-  color: blue
+  icon  : terminal
+  color : blue
